<resources>
    <string name="app_name">Health Tracking</string>
    <string name="next">Следующая</string>
    <string name="previous">Предыдущая</string>
    <string name="hello_home_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_dashboard_second">Hello HomeSecondFragment. Arg: %1$s</string>
    <string name="hello_notifications_second">Hello HomeSecondFragment. Arg: %1$s</string>

    <string name="title_health">Здоровье</string>
    <string name="title_calendar">Календарь</string>
    <string name="title_diary">Дневник</string>
    <string name="title_recommendations">Рекомендации</string>
    <string name="title_contacts">Контакты</string>
    <string name="post_description">Картинка болезни</string>>
    <string name="home_second">Home Second</string>

    <string name="greeting">Добро пожаловать</string>
    <string name="auth">Войти</string>
    <string name="registration">Зарегистрироваться</string>

    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="role">Роль</string>
    
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
