<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_greetings">

    <fragment
            android:id="@+id/nav_greetings"
            android:name="ru.timelimit.healthtracking.ui.auth.GreetingFragment"
            android:label="@string/greeting"
            tools:layout="@layout/fragment_greeting">

        <action
                android:id="@+id/action_to_auth"
                app:destination="@id/nav_auth"/>
        <action
                android:id="@+id/action_to_reg"
                app:destination="@id/nav_registration"/>
    </fragment>
    <fragment
            android:id="@+id/nav_auth"
            android:name="ru.timelimit.healthtracking.ui.auth.AuthFragment"
            android:label="@string/auth"
            tools:layout="@layout/fragment_auth">
        <action
                android:id="@+id/back_to_greetings"
                app:destination="@id/nav_greetings"/>
    </fragment>

    <fragment
            android:id="@+id/nav_registration"
            android:name="ru.timelimit.healthtracking.ui.auth.RegistrationFragment"
            android:label="@string/registration"
            tools:layout="@layout/fragment_registration">
        <action
                android:id="@+id/back_to_greetings"
                app:destination="@id/nav_greetings"/>
    </fragment>

</navigation>